rubocop/examples/good/style_LineEndConcatenation.rb
# This cop checks for string literal concatenation at the end of a line.

# good
some_str = 'ala' \
           'bala'
