rubocop/examples/bad/Style_SpaceBeforeComment.rb
# TODO: This cop checks for missing space between a token and a
#   comment on the same line.

# TODO: Put a space before an end-of-line comment.
